--- a/courses/ucla/2011-2012/winter/math269b/homework4/homework4.tex
+++ b/courses/ucla/2011-2012/winter/math269b/homework4/homework4.tex
@@ -34,7 +34,7 @@ Show that if $u_0$ is nonnegative, then
 \norm{u(t,\cdot)}_1 = \norm{u_0}_1.
 \end{equation*}
 
-\item[3.] Determine the stability and accuracy of the following combination of the Lax-Wendroff and Backward -Time Central-Space schemes to solve $u_t + a u_x = b u_{xx}$ (with $b > 0$):
+\item[3.] Determine the stability and accuracy of the following combination of the Lax-Wendroff and backward-time central-space schemes to solve $u_t + a u_x = b u_{xx}$ (with $b > 0$):
 \begin{align*}
 0 & = P_{k,h} v^n_m \\
   & = \frac{1}{k} \left( v^{n+1}_m - v^n_m \right) + \frac{a}{2h} \left( v^n_{m+1} - v^n_{m-1} \right) - \frac{a^2k}{2h^2} \left( v^n_{m+1} - 2 v^n_m + v^n_{m-1} \right) \\
